--- a/src/components/css/signupcard1.css
+++ b/src/components/css/signupcard1.css
@@ -3,13 +3,13 @@
   font-family: 'Open Sans', sans-serif;
 }
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   overflow: hidden;
   background: #111;
   background-repeat: no-repeat;
-}
+} */
 
 .signupSection {
   background: url(https://source.unsplash.com/TV2gg2kZD1o/1600x800);
