--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -23,15 +23,26 @@
   color: #61dafb;
 }
 
+ */
 
+
+/* body{
+  background: url(../img/174211.jpg);
+  background-size: cover;
+  background-position-y: -200px;     
+} */
+h2{
+  font-family: 'Poppins', sans-serif;
+}
 .signupSection {
-  background: url(https://source.unsplash.com/TV2gg2kZD1o/1600x800);
+  background: rgba(0,0,0,0.5);
+  background-position: center;
   background-repeat: no-repeat;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 800px;
+  width: 400px;
   height: 450px;
   text-align: center;
   display: flex;
@@ -39,27 +50,8 @@
   box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, 0.5);
 }
 
-.info {
-  width: 45%;
-  background: rgba(20, 20, 20, 0.8);
-  /* padding: 30px 0; */
-  border-right: 5px solid rgba(30, 30, 30, 0.8);
-}
-.info h2 {
-  /* padding-top: 30px; */
-  font-weight: 300;
-}
-.info p {
-  font-size: 18px;
-}
-.info .icon {
-  font-size: 8em;
-  padding: 20px 0;
-  color: #0ab4b4;
-}
-
 .signupForm {
-  width: 70%;
+  width: 100%;
   padding: 30px 0;
   background: rgba(20, 40, 40, 0.8);
   transition: .2s;
@@ -89,25 +81,20 @@
 
 #join-btn {
   border: 1px solid #0ab4b4;
+  border-radius: 5px;
   background: rgba(20, 20, 20, 0.6);
   font-size: 18px;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
   color: white;
   margin-top: 20px;
-  padding: 10px 50px;
+  padding: 5px 10px;
   cursor: pointer;
   transition: .4s;
 }
 #join-btn:hover {
   background: rgba(20, 20, 20, 0.8);
-  padding: 10px 80px;
+  padding: 10px 15px;
 }
 
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
