after review pakka version

--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -34,9 +34,12 @@ body {
   .slideout-open,
   .slideout-open body,
   .slideout-open .slideout-panel {
-    overflow: hidden;
+    /* overflow: hidden; */
   }
   
   .slideout-open .slideout-menu {
     display: block;
+  }
+  .panelfix{
+    margin-right: 256px;
   }
